# utsuro-oto

./: .gitignore  CLAUDE.md  README.md  index.html  main.py  mise.toml  pyproject.toml  style.css
tests/: conftest.py  test_config.py  test_hand_tracker.py  test_main_helpers.py  test_mapping.py  test_sound_engine.py  test_utils.py
thereminvox/: config.py  fluidsynth_check.py  hand_tracker.py  main.py  mapping.py  sound_engine.py  utils.py
thereminvox/static/: index.html  style.css
utsuro_oto/: config.py  fluidsynth_check.py  hand_tracker.py  main.py  mapping.py  sound_engine.py  utils.py
utsuro_oto/static/: index.html  main.js
